# blitzbuffers

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml  requirements.txt
.github/workflows/: build.yml
benchmarks/cpp/: CMakeLists.txt  CMakeSettings.json  alpaca_bench.h  bench.h  blitzbuffers_bench.h  blitzbuffers_generated.h  flatbuffers_bench.h  flatbuffers_generated.h  main.cpp
benchmarks/rust/: .gitignore  Cargo.toml
benchmarks/rust/src/: blitzbuffers_bench.rs  blitzbuffers_raw_first_bench.rs  blitzbuffers_raw_storage_bench.rs  data.rs  flatbuffers_bench.rs  flatbuffers_generated.rs  main.rs
benchmarks/schemas/: blitzbuffers.bzb  flatbuffers.fbs
ide/: .gitignore  .vscodeignore  bbs.tmLanguage.json  language-configuration.json  package.json  pnpm-lock.yaml  tsconfig.json
ide/client-vscode/: package.json  pnpm-lock.yaml
ide/client-vscode/src/: extension.ts
ide/server/: package.json
ide/server/src/: server.ts
src/blitzbuffers/: __main__.py  arg_util.py  languages.py  output_builder.py  parsing.py  shared.py
src/blitzbuffers/cpp/: blitzbuffers.hpp  common.py  enum.py  generate.py  prepare.py  struct.py  tagged_union.py
src/blitzbuffers/printer/: printer.py
src/blitzbuffers/rust/: blitzbuffers.rs  common.py  enum.py  generate.py  prepare.py  struct.py  tagged_union.py
tests/interlang/: .gitignore  compare.py  schema.bzb
tests/interlang/cpp/: CMakeLists.txt  CMakeSettings.json  test.cpp
tests/interlang/data/general/: data.json
tests/interlang/rust/: Cargo.toml
tests/interlang/rust/src/: json_entity.rs  main.rs
